# ActinidiaOnAndroid

./: README.md  build.gradle  gradle.properties
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/cc/moooc/actinidia/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: ActinidiaApi.h  native-lib.cpp
app/src/main/java/cc/moooc/actinidia/: AboutActivity.java  ActinidiaUtils.java  Game.java  GameActivity.java  GameListFragment.java  MainActivity.java  ZipExtractor.java
app/src/main/res/layout/: fragment_list.xml  layout_about.xml  layout_list_single.xml  layout_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/test/java/cc/moooc/actinidia/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
